fix(style): fix default style for links, align links and buttons in table

--- a/packages/veui-theme-dls/components/table.less
+++ b/packages/veui-theme-dls/components/table.less
@@ -110,6 +110,7 @@
     & + .@{veui-prefix}-button,
     & + .@{veui-prefix}-link {
       margin-left: @dls-table-action-spacing;
+      vertical-align: middle;
     }
   }
 
